<resources>
    <string name="app_name">FirstDayJava</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_back_into_your_account">Log back into your account</string>
    <string name="forget_password">Forget Password?</string>
    <string name="browse_products">Browse Products</string>
    <string name="sign_uptext">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="location">Location</string>
    <string name="get">get</string>
    <string name="birth_date">Birth date</string>
    <string name="get_date">Get Date</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">Sign in!</string>
    <string name="browse_by_category">Browse by category</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="sort">Sort</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="maximum_le">Maximum (LE)</string>
    <string name="mininmum_le">Mininmum (LE)</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="price_lower_to_higher">Price: Lower to Higher</string>
    <string name="most_recent">Most recent</string>
    <string name="price_higher_to_lower">Price: Higher to Lower</string>
    <string name="sort_by">Sort by</string>
    <string name="sorting_option">Sorting option</string>
    <string name="done">Done</string>

    <string name="api_error_602">First Name is Mandatory!</string>
    <string name="api_error_603">Phone is Mandatory!</string>
    <string name="api_error_604">Email is Mandatory!</string>
    <string name="api_error_605">Password is Mandatory!</string>
    <string name="api_error_606">Phone No Already Exist!</string>
    <string name="api_error_607">EmailID Already Exist!</string>
    <string name="api_error_genral">Something go wrong, The Api don\'t send anything</string>
    <string name="server_error_genral">Something go wrong, check internet connection</string>
    <string name="field">Field</string>
    <string name="loading">Get Requset</string>
    <string name="invalid_phone">Invalid Phone No!</string>
    <string name="invalid_password">Invalid Password!</string>
    <string name="confirm_password_error">The Confirm is not like the password</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="item_name">Item Name</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="sub_total">Sub total</string>
    <string name="cart">Cart</string>
    <string name="deleteTitle">Delete</string>
    <string name="deleteMsg">You Going now to delete this item, are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancle">Cancle</string>
    <string name="my_account">My Account</string>
    <string name="others">Others</string>
    <string name="settings">settings</string>
    <string name="change_password">Change Password</string>
    <string name="favorites">Favorites</string>
    <string name="addresses">Addresses</string>
    <string name="profile">Profile</string>
    <string name="language_options">Language options</string>
    <string name="log_out">Log out</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="about_us">about us</string>
    <string name="contact_us">contact us</string>
    <string name="more">More</string>
    <string name="changeLang">Language Change</string>
    <string name="logout_msg">Are you sure you want to log out this account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_information">personal information</string>
    <string name="edit">edit</string>
    <string name="full_name">full name</string>
    <string name="enter_you_name">Enter You Name</string>
    <string name="enter_you_email">Enter you email</string>
    <string name="visit_us">Visit Us</string>
    <string name="about_us_info">Ultimate Solutions is an IT company specialized in developing ERP solutions and specialized systems. \nUltimate Solutions was found in 1993, and since then we have been keen on providing the market with optimal IT solutions in accordance with global standards and advanced technology.</string>
    <string name="description">Description</string>
    <string name="show_more">Show more</string>
    <string name="address_details">Address Details</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="apartment">Apartment</string>
    <string name="floor">Floor</string>
    <string name="nearst_landmark">Nearst Landmark</string>
    <string name="optional">(Optional)</string>
    <string name="location_details">Location Details</string>
    <string name="latitude_longitude">Latitude - Longitude</string>
    <string name="location_type">Location Type</string>
    <string name="contact_details">Contact Details</string>
    <string name="landline_number">Landline number</string>
    <string name="save_address">Save Address</string>
    <string name="add_new_address">+Add New Address</string>
    <string name="map_location">Map Location</string>
    <string name="edited">Edited Done</string>
    <string name="saved" >Save Done</string>
    <string name="update_address">Update Address</string>
    <string name="status">Status</string>
    <string name="total_price">Total price</string>
    <string name="date">Date</string>
    <string name="delivered">Delivered</string>
    <string name="order_ndetails_n"><![CDATA[Order\nDetails\n>]]></string>
    <string name="orders">Orders</string>
    <string name="processed">Processed</string>
    <string name="shipped">Shipped</string>
    <string name="subtotal">Subtotal</string>
    <string name="taxes">Taxes</string>
    <string name="delivery">Delivery</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="order_summary">Order Summary -</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="item_s">Item(s)</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="cancled">Cancel Done</string>
    <string name="cancel_order_msg">Are you sure you want to cancel this order?</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_password">Update Password</string>
    <string name="not_match">Didn\'t match</string>
    <string name="incorrect_pass_msg">The Passwrod is incorrect</string>

</resources>